test/types/imag/opequals2.3.good
opequals2.chpl:7: error: type mismatch in assignment from real(64) to imag(64)
